<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, NodeActivity!</string>
    <string name="app_name">Node</string>
    <string name="username">登录名</string>
    <string name="password">登录密码</string>
    <string name="rePassword">重写密码</string>
    <string name="login">登陆</string>
    <string name="regist">注册</string>
    <string name="sure">确定</string>
    <string name="close">关闭</string>
    <string name="add">添加</string>
    <string name="update">更新</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="back">返回</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="list_up">上一层</string>
    <string name="list_add">添加元素</string>
    <string name="node_name">元素名</string>
    <string name="node_explain">元素详解</string>
    <string name="delete_sure">确认删除？</string>

</resources>