<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/delete_node_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/node_name" />

    <TextView
        android:id="@+id/delete_node_explain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/node_explain" />

    <!-- LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
    </LinearLayout-->
	<TextView
	    android:id="@+id/delete_node_warn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/delete_sure"
	    android:layout_gravity="center" 
	    android:textSize="20dp"/>
    
    <Button
        android:id="@+id/delete_node_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure"/>
    
    <Button
        android:id="@+id/delete_node_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>

</LinearLayout>