<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/detail_node_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/node_name" />

    <TextView
        android:id="@+id/detail_node_explain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/node_explain" />
    
    <Button
        android:id="@+id/detail_node_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"/>
    
    <Button
        android:id="@+id/detail_node_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"/>

</LinearLayout>