<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/node_name" />

    <EditText
        android:id="@+id/add_node_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/node_explain" />

    <EditText
        android:id="@+id/add_node_explain"
        android:layout_width="match_parent"
        android:singleLine="false"
        android:layout_height="0dip"
        android:layout_weight="0.13"
        android:gravity="top"
        android:inputType="text"
        android:minLines="5" >
    </EditText>

    <Button
        android:id="@+id/add_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure" />

    <Button
        android:id="@+id/add_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>